k8s/infrastructure/controllers/external-secrets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    trust-manager.cert-manager.io/inject-trust: "true"
