k8s/infrastructure/controllers/external-secrets/cilium-network-policy-es-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-es-egress-to-cert-manager
  namespace: external-secrets
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cert-manager
            app: cert-manager-webhook
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-es-egress-to-kube-api
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  egress:
    - toCIDR:
        - 10.96.0.1/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-es-webhook-ingress
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app: external-secrets-webhook
  ingress:
    - fromCIDR:
        - "0.0.0.0/0"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-api-server-from-es
  namespace: external-secrets
spec:
  endpointSelector: {}
  egress:
    - toCIDR:
        - 10.96.0.1/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
