k8s/infrastructure/controllers/external-secrets/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: external-secrets-validator
  annotations:
    cert-manager.io/inject-ca-from: external-secrets/external-secrets-webhook-tls
webhooks:
  - name: validate.external-secrets.io
    clientConfig:
      service:
        name: external-secrets-webhook
        namespace: external-secrets
        path: "/validate"
    rules:
      - apiGroups:   ["external-secrets.io"]
        apiVersions: ["v1beta1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["*"]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
  - name: validate.clustersecretstore.external-secrets.io
    clientConfig:
      service:
        name: external-secrets-webhook
        namespace: external-secrets
        path: "/validate"
    rules:
      - apiGroups:   ["external-secrets.io"]
        apiVersions: ["v1beta1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["clustersecretstores"]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1"]
